# human_regex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  tests.yml
examples/: extract_url_params.rs  foreword.txt  match_date.rs  match_html_tags.rs  mla_citation.rs  remove_stop_words_with_regex.rs
src/: ascii.rs  capturing.rs  cookbook.rs  direct.rs  emptymatches.rs  flags.rs  humanregex.rs  lib.rs  logical.rs  repetitions.rs  shorthand.rs
tests/: regex_crate_examples.rs  test.rs
